<resources>
    <string name="app_name">Taxi</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="title_activity_registration">Registration</string>

    <string name="hint_name">Full Name</string>
    <string name="hint_company_name">Company Name</string>

    <string name="hint_email">Email</string>
    <string name="hint_mobile">Cell Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_sign_up">Create Account</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>


    <string name="tell"><u>Tell us a bit about yourself!</u> </string>

    <string name="pick_a_role">Select the role that you want to assume, taxi client is someone that need a cab, taxi driver is the one&#8230;  well you know the drill&#8230; I hope.  </string>
    <string name="title_activity_taxi_splash">Taxi</string>
    <string name="title_activity_registration_confirmation">Confirmation</string>


    <string name="msg_sit_back">Sit back &amp; Relax! while I verify your mobile number</string>
    <string name="msg_manual_otp">(Enter the OTP below in case if I fail to detect the SMS automatically)</string>
    <string name="lbl_enter_otp">Enter OTP</string>
    <string name="lbl_submit">SUBMIT</string>
    <string name="title_activity_requester">Requester</string>


    <string name="desc_list_item_icon">Item Icon</string>


    <string-array name="disease_cat">
        <item>Symptoms</item>
        <item>Care Plan</item>
        <item>Image</item>
        <item>Medication</item>

    </string-array>


    <array name="nav_drawer_start_icons">
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>

    </array>


    <string name="title_non_com">Placeholder 1</string>
    <string name="title_com">Placeholder 2</string>
    <string name="title_first_aid">Placeholder 3</string>
    <string name="title_helpline">Placeholder 4</string>

    <string-array name="nav_drawer_labels">
        <item>@string/title_non_com</item>
        <item>@string/title_com</item>
        <item>@string/title_first_aid</item>
        <item>@string/title_helpline</item>
    </string-array>


    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_responder">Responder</string>
    <string name="title_activity_pick__des_map">Pick a location</string>

    <string name="tap_instructions">Tap or long press on the map</string>
    <string name="move_the_camera">Move the camera</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>


    <!--    Geolocation    -->
    <string name="no_geocoder_available">No geocoder available</string>

    <string name="fetch_address">Fetch address</string>

    <string name="address_found">Address found</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>

</resources>
